--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div>
-  <h2><a href="url">GitHub </a><a href="url">Instagram</a></h2>
+  <h2><a href="https://github.com/nveronicatran/read-write">GitHub </a><a href="https://www.instagram.com/nveronicatran/">Instagram</a></h2>
 </div>
 
 
@@ -36,15 +36,15 @@
 
   <div id="content">
   <div class="wrapper">
-    <div><img src="images/_MG_8839.jpg"></div>
-    <div><img src="images/_MG_8842_1.jpg"></div>
-    <div><img src="images/_MG_8908.jpg"></div>
-    <div><img src="images/_MG_9036.jpg"></div>
-    <div><img src="images/_MG_8999.jpg"></div>
-    <div><img src="images/_MG_9017.jpg"></div>
-    <div><img src="images/_MG_9091.jpg"></div>
-    <div><img src="images/_MG_9110.jpg"></div>
-    <div><img src="images/_MG_8912.jpg"></div>
+    <div><img src="images/MG-8839.jpg"></div>
+    <div><img src="images/MG-8842-1.jpg"></div>
+    <div><img src="images/MG-8908.jpg"></div>
+    <div><img src="images/MG-9036.jpg"></div>
+    <div><img src="images/MG-8999.jpg"></div>
+    <div><img src="images/MG-9017.jpg"></div>
+    <div><img src="images/MG-9091.jpg"></div>
+    <div><img src="images/MG-9110.jpg"></div>
+    <div><img src="images/MG-8912.jpg"></div>
   </div>
 </div>
 
